--- a/trunk/tools/BmptoZlibGC/BmptoZlibGC.cbp
+++ b/trunk/tools/BmptoZlibGC/BmptoZlibGC.cbp
@@ -7,16 +7,16 @@
 		<Option compiler="gcc" />
 		<Build>
 			<Target title="Release">
-				<Option output="bin\Release\BmptoZlibGC" prefix_auto="1" extension_auto="1" />
-				<Option object_output="obj\Release\" />
+				<Option output="bin/Release/BmptoZlibGC" prefix_auto="1" extension_auto="1" />
+				<Option object_output="obj/Release/" />
 				<Option type="1" />
-				<Option compiler="mingw_compiler" />
+				<Option compiler="mingw32_compiler" />
 				<Compiler>
 					<Add option="-O2" />
 				</Compiler>
 				<Linker>
 					<Add option="-s" />
-					<Add library="..\..\..\..\..\..\..\MinGW\lib\libz.a" />
+					<Add library="libz.a" />
 				</Linker>
 			</Target>
 		</Build>
@@ -29,6 +29,7 @@
 		<Extensions>
 			<code_completion />
 			<debugger />
+			<envvars />
 		</Extensions>
 	</Project>
 </CodeBlocks_project_file>
